--- a/analogClock.html
+++ b/analogClock.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<canvas  id="canvas" width="400" height="400" style="background-color:#456"></canvas>
+<canvas  id="canvas" width="400" height="400" style="background-color:#FFF"></canvas>
 <script src = "analogClock.js"></script>
 
 
